# MIREA_data-manipulation-software

./: .gitignore  docker-compose.yml
practice1/: db_install.sh  practice1_report.docx
practice2-5/: defaults.sql  functions.sql  install  policies.sql  practice2-5_report.docx  roles.sql  schema.sql
practice6/: practice6_report.docx  prepare_json_reports.sql
practice7-8/: .env.example  .pre-commit-config.yaml  alembic.ini  practice7-8_report.docx  pyproject.toml
practice7-8/app/: db.py  main.py  models.py
practice7-8/app/api/: __init__.py  providers.py
practice7-8/app/api/v1/: __init__.py
practice7-8/app/api/v1/endpoints/: contact_person.py  contract.py  equipment.py  group.py  organization.py  report.py  task.py  user.py
practice7-8/app/core/: const.py  http_exceptions.py  security.py  settings.py
practice7-8/app/crud/: base.py  contact_person.py  contract.py  equipment.py  group.py  organization.py  task.py  user.py
practice7-8/app/schemas/: contact_person.py  contract.py  equipment.py  group.py  organization.py  report.py  task.py  user.py
practice7-8/migrations/: env.py
practice7-8/migrations/versions/: 2022_10_23_1450-67f0919277d3_initial_migration.py  2022_10_23_1450-842ae59fe36e_set_defaults.py  2022_10_23_1929-9ae7cc106744_unique_organization_name.py  2022_10_23_2132-91e208eb921f_unique_equipment_postion_name.py  2022_10_24_0109-9e3348faf429_unique_equipment_balance_serial_number.py  2022_10_29_1325-4c98a7be36ec_update_task_models.py
