[tool.poetry]
name = "db-api"
version = "0.1.0"
description = ""
authors = ["Stanislav Lyubovsky <wallseat@gmail.com>"]
license = "MIT"
packages = [
  {include = "app/"},
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
asyncpg = "^0.26.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
SQLAlchemy = "^1.4.42"
sqlalchemy2-stubs = "^0.0.2-alpha.29"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
